--- a/client/question_detail.html
+++ b/client/question_detail.html
@@ -16,20 +16,20 @@
 
 <body>
     <div class="container">
-        <nav id="navigation-bar" class="navbar navbar-default">
-            <ul id="navigation-links">
-                <!-- <li><img src="http://lmsotfy.com/so.png" alt=""></li> -->
-                <li><a id="logo" href="#">Stack overflow</a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Create Questions</a></li>
-                <div class="ui icon input">
-                    <input type="text" placeholder="Search...">
-                    <i class="circular search link icon"></i>
-                </div>
-                <li class="navbar-right"><a href="#">Sign up</a></li>
-                <li class="navbar-right"><a href="#">Login</a></li>
-            </ul>
-        </nav>
+      <nav id="navigation-bar" class="navbar navbar-default">
+          <ul id="navigation-links">
+              <!-- <li><img src="http://lmsotfy.com/so.png" alt=""></li> -->
+              <li><a id="logo" href="#">Stack overflow</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="/create_questions.html">Create Questions</a></li>
+                  <div class="ui icon input">
+                      <input type="text" placeholder="Search...">
+                      <i class="circular search link icon"></i>
+                  </div>
+                  <li id="register" class="navbar-right"><a href="/register.html">Sign up</a></li>
+                  <li id="login" class="navbar-right"><a href="/login.html">Login</a></li>
+          </ul>
+      </nav>
         <img class="imageHome" src="http://i.imgur.com/ph1yogr.jpg">
 
         <div class="ui two column grid">
