--- a/client/create_questions.html
+++ b/client/create_questions.html
@@ -18,7 +18,9 @@
               <h2 class="ui teal image header">
                   <img src="https://cdn.sstatic.net/Sites/stackoverflow/img/apple-touch-icon@2.png?v=73d79a89bded" class="image">
                   <div class="">
+                    <a href="/">
                     Post Your Questions
+                  </a>
                   </div>
               </h2>
               <form class="ui large form">
@@ -26,16 +28,16 @@
                     <div class="field">
                         <div class="ui left icon input">
                             <!-- <i class="user icon"></i> -->
-                            <input type="text" name="title" placeholder="Title">
+                            <input id="title" type="text" name="title" placeholder="Title">
                         </div>
                     </div>
                       <div class="field">
                           <div class="ui left icon input">
                               <!-- <i class="user icon"></i> -->
-                              <input type="text" name="description" placeholder="description">
+                              <textarea id="description" type="text" name="description" placeholder="description"></textarea>
                           </div>
                       </div>
-                      <div class="ui fluid large teal submit button">POST</div>
+                      <div onclick="create()" class="ui fluid large teal submit button">POST</div>
                   </div>
 
                   <div class="ui error message"></div>
@@ -43,7 +45,7 @@
               </form>
 
               <div class="ui message">
-                Or Back to <a href="#">Home</a>
+                Or Back to <a href="/">Home</a>
               </div>
           </div>
       </div>
@@ -53,7 +55,7 @@
 
     <script src="./js/sweetalert.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/create_questions.js"></script>
     <script type="text/javascript" src="./js/semantic.min.js"></script>
 </body>
 
