--- a/client/login.html
+++ b/client/login.html
@@ -18,24 +18,27 @@
               <h2 class="ui teal image header">
                   <img src="https://cdn.sstatic.net/Sites/stackoverflow/img/apple-touch-icon@2.png?v=73d79a89bded" class="image">
                   <div class="">
-                    StackOverflow Sign in
+                    <a href="/">
+                      StackOverflow Sign in
+                    </a>
                   </div>
+
               </h2>
               <form class="ui large form">
                   <div class="ui stacked segment">
                       <div class="field">
                           <div class="ui left icon input">
                               <!-- <i class="user icon"></i> -->
-                              <input type="text" name="email" placeholder="E-mail address">
+                              <input id="email" type="text" name="email" placeholder="E-mail address">
                           </div>
                       </div>
                       <div class="field">
                           <div class="ui left icon input">
                               <!-- <i class="lock icon"></i> -->
-                              <input type="password" name="password" placeholder="Password">
+                              <input id="password" type="password" name="password" placeholder="Password">
                           </div>
                       </div>
-                      <div class="ui fluid large teal submit button">Login</div>
+                      <div onclick="login()" class="ui fluid large teal submit button">Login</div>
                   </div>
 
                   <div class="ui error message"></div>
@@ -43,7 +46,7 @@
               </form>
 
               <div class="ui message">
-                  New to us? <a href="#">Sign Up</a>
+                  New to us? <a href="/register.html">Sign Up</a>
               </div>
           </div>
       </div>
@@ -53,7 +56,7 @@
 
     <script src="./js/sweetalert.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/login_register.js"></script>
     <script type="text/javascript" src="./js/semantic.min.js"></script>
 </body>
 
