--- a/client/register.html
+++ b/client/register.html
@@ -11,55 +11,58 @@
     <link rel="stylesheet" type="text/css" href="/css/sweetalert.css">
     <title>Stackoverflow</title>
 </head>
+
 <body>
-  <div class="ui container center aligned containerTOP">
-      <div class="loginForm">
-          <div class="column">
-              <h2 class="ui teal image header">
+    <div class="ui container center aligned containerTOP">
+        <div class="loginForm">
+            <div class="column">
+                <h2 class="ui teal image header">
                   <img src="https://cdn.sstatic.net/Sites/stackoverflow/img/apple-touch-icon@2.png?v=73d79a89bded" class="image">
                   <div class="">
+                    <a href="/">
                     StackOverflow Sign Up
+                    </a>
                   </div>
               </h2>
-              <form class="ui large form">
-                  <div class="ui stacked segment">
-                    <div class="field">
-                        <div class="ui left icon input">
-                            <!-- <i class="user icon"></i> -->
-                            <input type="text" name="name" placeholder="Your Name">
+                <form class="ui large form">
+                    <div class="ui stacked segment">
+                        <div class="field">
+                            <div class="ui left icon input">
+                                <!-- <i class="user icon"></i> -->
+                                <input id="name" type="text" name="name" placeholder="Your Name">
+                            </div>
                         </div>
+                        <div class="field">
+                            <div class="ui left icon input">
+                                <!-- <i class="user icon"></i> -->
+                                <input id="email" type="text" name="email" placeholder="E-mail address">
+                            </div>
+                        </div>
+                        <div class="field">
+                            <div class="ui left icon input">
+                                <!-- <i class="lock icon"></i> -->
+                                <input id="password" type="password" name="password" placeholder="Password">
+                            </div>
+                        </div>
+                        <div onclick="register()" class="ui fluid large teal submit button">Sign Up</div>
                     </div>
-                      <div class="field">
-                          <div class="ui left icon input">
-                              <!-- <i class="user icon"></i> -->
-                              <input type="text" name="email" placeholder="E-mail address">
-                          </div>
-                      </div>
-                      <div class="field">
-                          <div class="ui left icon input">
-                              <!-- <i class="lock icon"></i> -->
-                              <input type="password" name="password" placeholder="Password">
-                          </div>
-                      </div>
-                      <div class="ui fluid large teal submit button">Sign Up</div>
-                  </div>
 
-                  <div class="ui error message"></div>
+                    <div class="ui error message"></div>
 
-              </form>
+                </form>
 
-              <div class="ui message">
-                  Already have an account? <a href="#">Sign in</a>
-              </div>
-          </div>
-      </div>
-  </div>
+                <div class="ui message">
+                    Already have an account? <a href="/login.html">Sign in</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
     <script src="./js/sweetalert.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/login_register.js"></script>
     <script type="text/javascript" src="./js/semantic.min.js"></script>
 </body>
 
