--- a/client/index.html
+++ b/client/index.html
@@ -31,42 +31,9 @@
         <img class="imageHome" src="http://i.imgur.com/ph1yogr.jpg">
 
         <div class="ui two column grid">
-            <div class="ui two column grid voteQues">
-                <div class="question ui grid">
-                    <div class="voteAns">
-                        <div>
-                            <h3>0</h3> Votes
-                        </div>
-                        <hr>
-                        <div>
-                            <h3>0</h3> Answer
-                        </div>
-                    </div>
-                    <div class="Ques">
-                        <a href="#">
-                            <div>Which tools and technologies are used to build the Stack Exchange Network?</div>
-                        </a>
-                        <p>What tools and technologies are used to build the Stack Exchange Network?</p>
-                    </div>
-                </div>
-                <div class="question ui grid">
-                    <div class="voteAns">
-                        <div>
-                            <h3>0</h3> Votes
-                        </div>
-                        <hr>
-                        <div>
-                            <h3>0</h3> Answer
-                        </div>
-                    </div>
-                    <div class="Ques">
-                        <a href="#">
-                            <div>Which tools and technologies are used to build the Stack Exchange Network?</div>
-                        </a>
-                        <p>What tools and technologies are used to build the Stack Exchange Network?</p>
-                    </div>
-                </div>
+            <div id="listquestions" class="ui two column grid voteQues">
 
+              
             </div>
 
 
@@ -91,6 +58,7 @@
     <script src="./js/sweetalert.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/getquestions.js"></script>
     <script type="text/javascript" src="./js/semantic.min.js"></script>
 </body>
 
