--- a/client/question_detail.html
+++ b/client/question_detail.html
@@ -77,7 +77,7 @@
 
     <script src="./js/sweetalert.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <!-- <script type="text/javascript" src="./js/index.js"></script> -->
     <script type="text/javascript" src="./js/question_detail.js"></script>
     <script type="text/javascript" src="./js/semantic.min.js"></script>
 </body>
