--- a/client/home.html
+++ b/client/home.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
       <style media="screen">
         nav{
-          margin-bottom: 5%;
+          margin-bottom: 2%;
         }
       </style>
       <!--Let browser know website is optimized for mobile-->
@@ -30,7 +30,29 @@
 
       <!-- content -->
       <div class="container">
-
+        <!-- input question -->
+        <div class="row z-depth-4">
+           <div class="col s12">
+             <div class="container">
+               <div class="row">
+                 <div class="input-field col s12">
+                   <input id="title" type="text" class="validate">
+                   <label for="title">Title</label>
+                 </div>
+               </div>
+               <div class="row">
+                 <div class="input-field col s12">
+                   <input id="question" type="text" class="validate">
+                   <label for="question">Question</label>
+                 </div>
+               </div>
+               <div class="row">
+                 <a class="waves-effect green btn right">Create Question</a>
+               </div>
+             </div>
+           </div>
+         </div>
+        <!-- input question -->
       </div>
       <!-- content -->
 
